# Telegram-search-bot

./: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  MONGODB_SETUP.md  README.md  SETUP.md  auth_simple.py  bot.py  bot_backup.py  close_all_sessions.py  docker-compose.yml  fixed_bot.py  memory_auth.py  mongo-init.js  mongo_test.py  pyproject.toml  requirements.txt  session_string.txt  simple_bot_auth.py  test_mongo.py  update_bot.py
.github/workflows/: ci-cd.yml
tests/: test_basic.py
website/: CONTRIBUTING.md  LICENSE  README.md  about.html  app.py  blog.html  careers.html  cookie.html  faq.html  index.html  pricing.html  privacy.html  support.html  terms.html  test.py
website/css/: style.css
website/js/: main.js
